changes/4.20/b4fbf423cef96badb723f24db057e04e8b19d105
media: imx-pxp: fix compilation on i386 or x86_64

Include the missing interrupt.h header to fix compilation on i386 or
x86_64:

 ../drivers/media/platform/imx-pxp.c:988:1: error: unknown type name 'irqreturn_t'
  static irqreturn_t pxp_irq_handler(int irq, void *dev_id)
  ^
 ../drivers/media/platform/imx-pxp.c: In function 'pxp_irq_handler':
 ../drivers/media/platform/imx-pxp.c:1012:9: error: 'IRQ_HANDLED' undeclared (first use in this function)
   return IRQ_HANDLED;
          ^
 ../drivers/media/platform/imx-pxp.c:1012:9: note: each undeclared identifier is reported only once for each function it appears in
 ../drivers/media/platform/imx-pxp.c: In function 'pxp_probe':
 ../drivers/media/platform/imx-pxp.c:1660:2: error: implicit declaration of function 'devm_request_threaded_irq' [-Werror=implicit-function-declaration]
   ret = devm_request_threaded_irq(&pdev->dev, irq, NULL, pxp_irq_handler,
   ^
 ../drivers/media/platform/imx-pxp.c:1661:4: error: 'IRQF_ONESHOT' undeclared (first use in this function)
     IRQF_ONESHOT, dev_name(&pdev->dev), dev);

Fixes: 51abcf7fdb70 ("media: imx-pxp: add i.MX Pixel Pipeline driver")

Reported-by: Randy Dunlap <rdunlap@infradead.org>
Signed-off-by: Philipp Zabel <p.zabel@pengutronix.de>
Acked-by: Randy Dunlap <rdunlap@infradead.org>
Signed-off-by: Hans Verkuil <hans.verkuil@cisco.com>
Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>

